--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+     <data>
+         <variable
+             name="mainViewModel"
+             type="com.source.truecallerapp.ui.MainViewModel" />
+     </data>
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,11 +63,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:text="@{mainViewModel.tenthChar}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/char_textView"
-        tools:text="10th Character" />
+        />
 
     <TextView
             android:id="@+id/every_tenth_char_view"
@@ -89,7 +98,8 @@
                 android:id="@+id/everytenthchar_data_view"
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
-                tools:text="Every 10th Character" />
+                android:text="@{mainViewModel.everyTenthChar}"
+                 />
 
         </ScrollView>
 
@@ -125,8 +135,10 @@
                 android:id="@+id/wordcount_data_view"
                 android:layout_width="wrap_content"
                 android:layout_height="120dp"
-                tools:text="Words Counter" />
+                android:text="@{mainViewModel.wordsCount}"
+                 />
 
         </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
